<resources>
    <string name="test_string">Testing</string>
    <string name="app_name">CX3004</string>


    <string name="tab_text_1">Bluetooth</string>
    <string name="tab_text_2">Comms</string>
    <string name="tab_text_3">Robot State</string>
    <string name="tab_text_4">Control</string>
    <string name="tab_text_5">Fastest Car</string>

    <!--  Bluetooth  -->
    <string name="Toggle_Switch">OFF</string>
    <string name="search_btn">SEARCH</string>
    <string name="connect_btn">CONNECT</string>
    <string name="bluetooth_status">Disconnected</string>
    <string name="paired_devices_header">Paired Devices</string>
    <string name="found_devices_header">Found Devices</string>

    <!--  Obstacle IDs  -->
    <string name="obstacle1_id">1</string>
    <string name="obstacle2_id">2</string>
    <string name="obstacle3_id">3</string>
    <string name="obstacle4_id">4</string>
    <string name="obstacle5_id">5</string>
    <string name="obstacle6_id">6</string>
    <string name="obstacle7_id">7</string>
    <string name="obstacle8_id">8</string>

    <!-- Map -->
    <string name="set_btn">SET</string>

    <!-- Titles & headers -->
    <string name="title_blank_page">Blank Page</string>
    <string name="title_bluetooth_pairing">Bluetooth Pairing</string>
    <string name="title_image_recognition">Image Recognition</string>
    <string name="title_fastest_car_task">Fastest Car Task</string>
    <string name="header_paired_device">Paired Devices</string>
    <string name="header_discovered_device">Discovered Devices</string>
    <string name="header_message">Messages</string>

    <!-- In-app text -->
    <string name="bluetooth_on">On</string>
    <string name="bluetooth_off">Off</string>
    <string name="sender_hint">Message to send...</string>
    <string name="robot_x_state">X: 1.5</string>
    <string name="robot_y_state">Y: 1.5</string>
    <string name="robot_direction_state">Direction: UP</string>

    <!-- Context descriptions -->
    <string name="nav_button_description">Navigation</string>
    <string name="send_button_description">Send</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>