<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/faint_orange"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_back"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/title_bluetooth_pairing"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@color/dark_orange"
            android:textSize="@dimen/title_size"
            tools:layout_conversion_absoluteHeight="59dp"
            tools:layout_conversion_absoluteWidth="229dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Switch
            android:id="@+id/bluetoothSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="0dp"
            android:splitTrack="false"
            android:text="@string/Toggle_Switch"
            android:textSize="18dp"
            android:textStyle="bold"
            android:thumbTint="@color/dark_orange"
            android:trackTint="@color/dark_orange_variant" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/connStatusTextView"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@drawable/gradient_colour"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/bluetooth_status"
        android:textAllCaps="true"
        android:textColor="#1B1A1A"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <Button
        android:id="@+id/connectBtn"
        style="@style/button"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:text="@string/connect_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discovDevicesListView"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/searchBtn"
        style="@style/button"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:onClick="scanForDevices"
        android:text="@string/search_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/connectBtn"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discovDevicesListView"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/discovDevicesTitleTextView"
        style="@style/headerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="#bdb9b9"
        android:text="@string/found_devices_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pairedDevicesListView"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="321dp" />

    <ListView
        android:id="@+id/discovDevicesListView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/fade_top"
        android:gravity="bottom"
        android:paddingLeft="@dimen/text_padding"
        android:scrollbars="vertical"
        android:text=""
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discovDevicesTitleTextView" />

    <TextView
        android:id="@+id/pairedDevicesTitleTextView"
        style="@style/headerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paired_devices_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connStatusTextView" />

    <ListView
        android:id="@+id/pairedDevicesListView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/fade_top"
        android:gravity="bottom"
        android:listSelector="@color/list_selector"
        android:paddingLeft="@dimen/text_padding"
        android:scrollbars="vertical"
        android:text=""
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pairedDevicesTitleTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
